chore(fix): fix header z-index issue

--- a/src/styles/theme/_header.scss
+++ b/src/styles/theme/_header.scss
@@ -3,9 +3,9 @@
 // ==================================================
 
 .matero-header {
-  display: block;
   position: relative;
-  z-index: 9;
+  z-index: 201;
+  display: block;
 
   .matero-toolbar {
     padding: 0;
